# raybird

./: Cargo.toml  README.md
benches/: tracer_bench.rs
desktop/: Cargo.toml
desktop/src/: main.rs
src/: bsdf.rs  bxdf.rs  camera.rs  lib.rs  material.rs  onb.rs  ray.rs  scene.rs  scene_loader.rs  sensor.rs  sphere.rs  tracer.rs  transform.rs
