[package]
name = "desktop"
version = "0.1.0"
authors = ["Chris Pearce <christopher.james.pearce@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
raybird = { path = "../" }
minifb = "0.13"
crossbeam = "0.7.2"